--- a/package.json
+++ b/package.json
@@ -50,6 +50,7 @@
     "flow-bin": "0.63.1",
     "html-webpack-plugin": "2.30.1",
     "jest": "22.1.3",
+    "jest-styled-components": "4.10.0",
     "prettier-eslint": "8.8.0",
     "webpack": "3.10.0",
     "webpack-dev-server": "2.11.0"
