Remove and edit boilerplate stuff

--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "wupa-react-boilerplate",
+  "name": "react-pong",
   "version": "1.0.0",
   "main": "src/index.js",
   "author": "Daniel Zelaya <wupaz9@gmail.com> (https://github.com/danielzy95)",
