--- a/.eslintrc
+++ b/.eslintrc
@@ -21,6 +21,8 @@
     "jest": true
   },
   "rules": {
-    "react/jsx-filename-extension": 0
+    "react/jsx-filename-extension": 0,
+    "global-require": 0,
+    "no-plusplus": 0
   }
 }
