--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "react-pong",
   "version": "1.0.0",
-  "main": "src/index.js",
+  "main": "build/index.js",
   "author": "Daniel Zelaya <wupaz9@gmail.com> (https://github.com/danielzy95)",
   "license": "MIT",
   "scripts": {
