--- a/package.json
+++ b/package.json
@@ -22,9 +22,12 @@
   },
   "dependencies": {
     "express": "4.16.2",
+    "konva": "1.7.6",
+    "prop-types": "15.6.0",
     "react": "16.2.0",
     "react-dom": "16.2.0",
     "react-hot-loader": "3.1.3",
+    "react-konva": "1.6.6",
     "styled-components": "2.4.0"
   },
   "devDependencies": {
